Issue: #FT-4081 Component: Changes: 1. Update some styles in Edit Field Trip modal. - center align the tab header text - change background color for the empty area in left quick search panel - hide Regenerate Directions button if Direction tab is not active

--- a/TripfinderWeb/TripfinderWeb/Global/Css/RoutingMapPanel.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/RoutingMapPanel.less
@@ -3345,7 +3345,8 @@
 			}
 
 			p {
-				margin: 5px 50px;
+				margin: 5px auto;
+				text-align: center;
 				white-space: nowrap;
 				cursor: pointer;
 			}
