--- a/TripfinderWeb/TripfinderWeb/Global/Css/RoutingMapSearch.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/RoutingMapSearch.less
@@ -1322,5 +1322,11 @@
 				border: 2px dashed gray;
 			}
 		}
+
+		.upload-file-empty-holder {
+			margin: 13px auto;
+			width: 0px;
+			flex-grow: 0;
+		}
 	}
 }
